--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,16 @@ authors = [
 requires-python = ">=3.8"
 license = {text = "Apache 2.0"}
 version = "0.0.1"
+dependencies = [
+    "testcontainers < 3.8",
+    "ytsaurus-client < 0.14",
+]
+
+[project.optional-dependencies]
+tests = [
+    "pytest < 9",
+    "requests < 3",
+]
 
 [tool.setuptools.packages.find]
 where = ["."]
