--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ authors = [
 ]
 requires-python = ">=3.8"
 license = {text = "Apache 2.0"}
-version = "0.0.0"
+dynamic = ["version"]
 dependencies = [
     "testcontainers < 3.8",
     "ytsaurus-client < 0.14",
