--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -77,3 +77,11 @@ jobs:
       url: https://pypi.org/p/testcontainers-yt-local
     permissions:
       id-token: write
+    steps:
+      - name: Download all the dists
+        uses: actions/download-artifact@v3
+        with:
+          name: python-package-distributions
+          path: dist/
+      - name: Publish distribution 📦 to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
