oooops [changelog-ignore]

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "testcontainers-yt-local"
 description = "Testcontainer for Yt"
-readme =
+readme = "README.md"
 authors = [
     {name = "Dmitriy Fedorov"},
 ]
