Revert "one more release fix"
This reverts commit ece38d6a39febda74ccbabadc00cee275a29eb57.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,6 +9,8 @@ jobs:
     environment:
       name: pypi
       url: https://pypi.org/p/testcontainers-yt-local
+    permissions:
+      id-token: write
     steps:
       - name: "Checkout code"
         uses: actions/checkout@v4
