--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,10 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
+pytest = [
+    "pytest < 9",
+]
+
 tests = [
     "pytest < 9",
     "requests < 3",
@@ -25,6 +29,9 @@ release = [
 
 [tool.setuptools.packages.find]
 where = ["."]
+
+[project.entry-points.pytest11]
+testcontainers_yt_local = "testcontainers_yt_local.fixtures"
 
 [tool.setuptools.dynamic]
 version = {attr = "testcontainers_yt_local.__version__"}
