--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 name = "testcontainers-yt-local"
 description = "Testcontainer for Yt"
 readme = "README.md"
+keywords = ["testing", "docker", "test automation", "yt", "ytsaurus", "pytest"]
 authors = [
     {name = "Dmitriy Fedorov"},
 ]
